src/freeRTOS/wrapper.rs

pub const configRECORD_STACK_HIGH_ADDRESS: u32 = 0;
pub const configINCLUDE_FREERTOS_TASK_C_ADDITIONS_H: u32 = 0;
pub const configEXPECTED_IDLE_TIME_BEFORE_SLEEP: u32 = 2;
pub const configINITIAL_TICK_COUNT: u32 = 0;
pub const configUSE_TASK_FPU_SUPPORT: u32 = 1;
pub const configRUN_ADDITIONAL_TESTS: u32 = 0;
pub const configENABLE_PAC: u32 = 0;
pub const configENABLE_BTI: u32 = 0;
pub const tskKERNEL_VERSION_NUMBER: &[u8; 9] = b"V11.1.0+\0";
pub const tskKERNEL_VERSION_MAJOR: u32 = 11;
pub const tskKERNEL_VERSION_MINOR: u32 = 1;
pub const tskKERNEL_VERSION_BUILD: u32 = 0;
pub const tskMPU_REGION_READ_ONLY: u32 = 1;
pub const tskMPU_REGION_READ_WRITE: u32 = 2;
pub const tskMPU_REGION_EXECUTE_NEVER: u32 = 4;
pub const tskMPU_REGION_NORMAL_MEMORY: u32 = 8;
pub const tskMPU_REGION_DEVICE_MEMORY: u32 = 16;
pub const tskMPU_READ_PERMISSION: u32 = 1;
pub const tskMPU_WRITE_PERMISSION: u32 = 2;
pub const tskDEFAULT_INDEX_TO_NOTIFY: u32 = 0;
pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of max_align_t"][::std::mem::size_of::<max_align_t>() - 32usize];
    ["Alignment of max_align_t"][::std::mem::align_of::<max_align_t>() - 16usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce1"]
        [::std::mem::offset_of!(max_align_t, __clang_max_align_nonce1) - 0usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce2"]
        [::std::mem::offset_of!(max_align_t, __clang_max_align_nonce2) - 16usize];
};
pub type __u_char = ::std::os::raw::c_uchar;
pub type __u_short = ::std::os::raw::c_ushort;
pub type __u_int = ::std::os::raw::c_uint;
pub type __u_long = ::std::os::raw::c_ulong;
pub type __int8_t = ::std::os::raw::c_schar;
pub type __uint8_t = ::std::os::raw::c_uchar;
pub type __int16_t = ::std::os::raw::c_short;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
pub type __uint64_t = ::std::os::raw::c_ulong;
pub type __int_least8_t = __int8_t;
pub type __uint_least8_t = __uint8_t;
pub type __int_least16_t = __int16_t;
pub type __uint_least16_t = __uint16_t;
pub type __int_least32_t = __int32_t;
pub type __uint_least32_t = __uint32_t;
pub type __int_least64_t = __int64_t;
pub type __uint_least64_t = __uint64_t;
pub type __quad_t = ::std::os::raw::c_long;
pub type __u_quad_t = ::std::os::raw::c_ulong;
pub type __intmax_t = ::std::os::raw::c_long;
pub type __uintmax_t = ::std::os::raw::c_ulong;
pub type __dev_t = ::std::os::raw::c_ulong;
pub type __uid_t = ::std::os::raw::c_uint;
pub type __gid_t = ::std::os::raw::c_uint;
pub type __ino_t = ::std::os::raw::c_ulong;
pub type __ino64_t = ::std::os::raw::c_ulong;
pub type __mode_t = ::std::os::raw::c_uint;
pub type __nlink_t = ::std::os::raw::c_ulong;
pub type __off_t = ::std::os::raw::c_long;
pub type __off64_t = ::std::os::raw::c_long;
pub type __pid_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __fsid_t {
    pub __val: [::std::os::raw::c_int; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __fsid_t"][::std::mem::size_of::<__fsid_t>() - 8usize];
    ["Alignment of __fsid_t"][::std::mem::align_of::<__fsid_t>() - 4usize];
    ["Offset of field: __fsid_t::__val"][::std::mem::offset_of!(__fsid_t, __val) - 0usize];
};
pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __suseconds64_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type TaskFunction_t =
    ::std::option::Option<unsafe extern "C" fn(arg: *mut ::std::os::raw::c_void)>;
pub type StackType_t = usize;
pub type BaseType_t = ::std::os::raw::c_long;
pub type UBaseType_t = u64;
pub type TickType_t = u64;
unsafe extern "C" {
    pub fn vPortEnterCritical();
}
unsafe extern "C" {
    pub fn vPortExitCritical();
}
unsafe extern "C" {
    pub fn uxPortSetInterruptMask() -> UBaseType_t;
}
unsafe extern "C" {
    pub fn vPortClearInterruptMask(uxNewMaskValue: UBaseType_t);
}
unsafe extern "C" {
    pub fn vPortInstallFreeRTOSVectorTable();
}
unsafe extern "C" {
    pub fn FreeRTOS_Tick_Handler();
}
unsafe extern "C" {
    pub fn vPortTaskUsesFPU();
}
unsafe extern "C" {
    pub fn vPortValidateInterruptPriority();
}
unsafe extern "C" {
    pub fn pxPortInitialiseStack(
        pxTopOfStack: *mut StackType_t,
        pxCode: TaskFunction_t,
        pvParameters: *mut ::std::os::raw::c_void,
    ) -> *mut StackType_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HeapRegion {
    pub pucStartAddress: *mut u8,
    pub xSizeInBytes: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of HeapRegion"][::std::mem::size_of::<HeapRegion>() - 16usize];
    ["Alignment of HeapRegion"][::std::mem::align_of::<HeapRegion>() - 8usize];
    ["Offset of field: HeapRegion::pucStartAddress"]
        [::std::mem::offset_of!(HeapRegion, pucStartAddress) - 0usize];
    ["Offset of field: HeapRegion::xSizeInBytes"]
        [::std::mem::offset_of!(HeapRegion, xSizeInBytes) - 8usize];
};
pub type HeapRegion_t = HeapRegion;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xHeapStats {
    pub xAvailableHeapSpaceInBytes: usize,
    pub xSizeOfLargestFreeBlockInBytes: usize,
    pub xSizeOfSmallestFreeBlockInBytes: usize,
    pub xNumberOfFreeBlocks: usize,
    pub xMinimumEverFreeBytesRemaining: usize,
    pub xNumberOfSuccessfulAllocations: usize,
    pub xNumberOfSuccessfulFrees: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of xHeapStats"][::std::mem::size_of::<xHeapStats>() - 56usize];
    ["Alignment of xHeapStats"][::std::mem::align_of::<xHeapStats>() - 8usize];
    ["Offset of field: xHeapStats::xAvailableHeapSpaceInBytes"]
        [::std::mem::offset_of!(xHeapStats, xAvailableHeapSpaceInBytes) - 0usize];
    ["Offset of field: xHeapStats::xSizeOfLargestFreeBlockInBytes"]
        [::std::mem::offset_of!(xHeapStats, xSizeOfLargestFreeBlockInBytes) - 8usize];
    ["Offset of field: xHeapStats::xSizeOfSmallestFreeBlockInBytes"]
        [::std::mem::offset_of!(xHeapStats, xSizeOfSmallestFreeBlockInBytes) - 16usize];
    ["Offset of field: xHeapStats::xNumberOfFreeBlocks"]
        [::std::mem::offset_of!(xHeapStats, xNumberOfFreeBlocks) - 24usize];
    ["Offset of field: xHeapStats::xMinimumEverFreeBytesRemaining"]
        [::std::mem::offset_of!(xHeapStats, xMinimumEverFreeBytesRemaining) - 32usize];
    ["Offset of field: xHeapStats::xNumberOfSuccessfulAllocations"]
        [::std::mem::offset_of!(xHeapStats, xNumberOfSuccessfulAllocations) - 40usize];
    ["Offset of field: xHeapStats::xNumberOfSuccessfulFrees"]
        [::std::mem::offset_of!(xHeapStats, xNumberOfSuccessfulFrees) - 48usize];
};
pub type HeapStats_t = xHeapStats;
unsafe extern "C" {
    pub fn vPortDefineHeapRegions(pxHeapRegions: *const HeapRegion_t);
}
unsafe extern "C" {
    pub fn vPortGetHeapStats(pxHeapStats: *mut HeapStats_t);
}
unsafe extern "C" {
    pub fn pvPortMalloc(xWantedSize: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn pvPortCalloc(xNum: usize, xSize: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn vPortFree(pv: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn vPortInitialiseBlocks();
}
unsafe extern "C" {
    pub fn xPortGetFreeHeapSize() -> usize;
}
unsafe extern "C" {
    pub fn xPortGetMinimumEverFreeHeapSize() -> usize;
}
unsafe extern "C" {
    pub fn xPortResetHeapMinimumEverFreeHeapSize();
}
unsafe extern "C" {
    pub fn vPortHeapResetState();
}
unsafe extern "C" {
    pub fn xPortStartScheduler() -> BaseType_t;
}
unsafe extern "C" {
    pub fn vPortEndScheduler();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xSTATIC_LIST_ITEM {
    pub xDummy2: TickType_t,
    pub pvDummy3: [*mut ::std::os::raw::c_void; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of xSTATIC_LIST_ITEM"][::std::mem::size_of::<xSTATIC_LIST_ITEM>() - 40usize];
    ["Alignment of xSTATIC_LIST_ITEM"][::std::mem::align_of::<xSTATIC_LIST_ITEM>() - 8usize];
    ["Offset of field: xSTATIC_LIST_ITEM::xDummy2"]
        [::std::mem::offset_of!(xSTATIC_LIST_ITEM, xDummy2) - 0usize];
    ["Offset of field: xSTATIC_LIST_ITEM::pvDummy3"]
        [::std::mem::offset_of!(xSTATIC_LIST_ITEM, pvDummy3) - 8usize];
};
pub type StaticListItem_t = xSTATIC_LIST_ITEM;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xSTATIC_MINI_LIST_ITEM {
    pub xDummy2: TickType_t,
    pub pvDummy3: [*mut ::std::os::raw::c_void; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of xSTATIC_MINI_LIST_ITEM"][::std::mem::size_of::<xSTATIC_MINI_LIST_ITEM>() - 24usize];
    ["Alignment of xSTATIC_MINI_LIST_ITEM"]
        [::std::mem::align_of::<xSTATIC_MINI_LIST_ITEM>() - 8usize];
    ["Offset of field: xSTATIC_MINI_LIST_ITEM::xDummy2"]
        [::std::mem::offset_of!(xSTATIC_MINI_LIST_ITEM, xDummy2) - 0usize];
    ["Offset of field: xSTATIC_MINI_LIST_ITEM::pvDummy3"]
        [::std::mem::offset_of!(xSTATIC_MINI_LIST_ITEM, pvDummy3) - 8usize];
};
pub type StaticMiniListItem_t = xSTATIC_MINI_LIST_ITEM;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xSTATIC_LIST {
    pub uxDummy2: UBaseType_t,
    pub pvDummy3: *mut ::std::os::raw::c_void,
    pub xDummy4: StaticMiniListItem_t,
}
